# Micro_Brico

./: .cproject  .gitignore  .project  CMakeLists.txt  README.txt  connect_db.cpp  connect_db.h  datamodel.cpp  datamodel.h  item.cpp  item.h  kit.cpp  kit.h  log.cpp  log.h  logger.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  management.cpp  management.h  money.cpp  money.h  resa.cpp  resa.h  sortie.cpp  sortie.h  types.h  utilisateur.cpp  utilisateur.h  utils.cpp  utils.h
installer/: gen_installer.bat  gen_installer_debug.bat  readme.txt
installer/config/: config.xml
liquibase/: liquibase.properties  liquibase_AGO.properties  liquibase_update_ago.bat  liquibase_update_ago_prod.bat  microbrico-changelog.mysql.sql
logger/: log_user_kit_appli.cpp  log_user_kit_appli.h  log_user_kit_appli.ui  logbrowser.cpp  logbrowser.h  logbrowserdialog.cpp  logbrowserdialog.h
popups/: connect.ui  delete_user.cpp  delete_user.h  delete_user.ui  login_connect.cpp  login_connect.h  login_connect.ui  poppupaddkit.cpp  poppupaddkit.h  poppupaddkit.ui  popupaddusers.cpp  popupaddusers.h  popupaddusers.ui  popuppchangeitemquantities.cpp  popuppchangeitemquantities.h  popuppchangeitemquantities.ui  popupsortirresa.cpp  popupsortirresa.h  popupsortirresa.ui
script/: copy_csv_to_db.py  export_papi_filtered_small.csv
